--- a/PyTorch-introduce.ipynb
+++ b/PyTorch-introduce.ipynb
@@ -250,19 +250,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0, 1])\n"
+      "tensor([1, 3])\n"
      ]
     }
    ],
    "source": [
-    "print(x[:, 1])"
+    "print(y[:, 1])"
    ]
   },
   {
