complete getting started

--- a/getting-started.ipynb
+++ b/getting-started.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -44,11 +44,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[   0.0000,    0.0000, 1678.3075],\n",
-      "        [   0.0000,    0.0000,    0.0000],\n",
-      "        [   0.0000,    0.0000,    0.0000],\n",
-      "        [   0.0000,    0.0000,    0.0000],\n",
-      "        [   0.0000,    0.0000, 1676.8411]])\n"
+      "tensor([[ 0.0000e+00, -2.5244e-29,  8.1220e-01],\n",
+      "        [ 1.5849e+29,  1.3400e+02,  6.1802e+20],\n",
+      "        [ 1.7321e-24,  4.2334e-37,  1.6036e-30],\n",
+      "        [ 2.7713e-23,  4.2334e-37,  1.6035e-30],\n",
+      "        [ 4.2287e-28,  7.0945e-21,  0.0000e+00]])\n"
      ]
     }
    ],
@@ -172,6 +172,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 연산"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "파이토치에서의 덧셈"
    ]
   },
@@ -266,11 +273,234 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "아래와 같이 **view()**를 통해 tensor의 크기, shape를 변경할 수 있음.\n",
+    "\n",
+    "(-1을 인자로 넣을 경우 차원을 유추함)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 4])\n",
+      "torch.Size([16])\n",
+      "torch.Size([2, 8])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.randn(4, 4)\n",
+    "y = x.view(16)\n",
+    "z = x.view(-1, 8)\n",
+    "\n",
+    "print(x.size())\n",
+    "print(y.size())\n",
+    "print(z.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "텐서의 **값이 1개일 경우** item() 메서드로 불러올 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-1.2676])\n",
+      "-1.2676217555999756\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.randn(1)\n",
+    "print(x)\n",
+    "print(x.item());"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NumPy 변환"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tensor를 numpy 배열로 변환하거나 반대로할 수 있다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Torch Tensor를 Numpy 배열로 변환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1., 1., 1., 1., 1.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.ones(5)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = a.numpy()\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "저장공간을 공유하기 때문에 다음과 같은 출력이 나타남"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([5., 5., 5., 5., 5.])\n",
+      "[5. 5. 5. 5. 5.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.add_(1)\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NumPy 배열을 Torch Tensor로 변환하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. 1. 1.]\n",
+      "tensor([1., 1., 1., 1., 1.], dtype=torch.float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.ones(5)\n",
+    "b = torch.from_numpy(a)\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "저장공간 공유"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3. 3. 3. 3. 3.]\n",
+      "tensor([3., 3., 3., 3., 3.], dtype=torch.float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.add(a, 1, out=a)\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CUDA Tensors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "to() 메서드를 통해 Tensor를 어떠한 장치로 옮길 수 있음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device(\"cuda\")\n",
+    "    y = torch.ones_like(x, device=device)\n",
+    "    x = x.to(device)\n",
+    "    z = x + y\n",
+    "    print(z)\n",
+    "    print(z.to(\"CPU\", torch.double))"
+   ]
   }
  ],
  "metadata": {
